--- a/content/css/styles.css
+++ b/content/css/styles.css
@@ -118,3 +118,38 @@ main{
   cursor: pointer;
   margin-left: 10px;
 }
+
+
+input.ng-invalid.ng-touched{
+ border:2px solid red;
+}
+
+
+/* Animations */
+
+main.ng-enter{
+  transition: 0.5s linear all;
+  opacity:0
+}
+
+main.ng-enter.ng-enter-active{
+  opacity: 1;
+}
+
+.new li.ng-enter{
+  transition: 0.5s linear all;
+  opacity:0
+}
+.new li.ng-enter.ng-enter-active{
+  opacity:1
+}
+
+.new li.ng-leave{
+  transition: 0.5s linear all;
+  opacity:1;
+  transform: translateX(0);
+}
+.new li.ng-leave.ng-leave-active{
+  opacity:0;
+  transform: translateX(-100%);
+}
